feat: Enhance accessibility and user experience
This commit introduces several improvements focused on making the application more accessible and user-friendly. Key changes include:

-   **Visible Focus Indicators:** Added custom CSS for `:focus-visible` to provide clear visual outlines for keyboard navigation users, improving discoverability.
-   **ARIA Attributes:** Incorporated `aria-label` on navigation elements and `aria-hidden="true"` on decorative icons to enhance screen reader interpretations.
-   **Live Status Announcements:** Implemented `role="status"` and `aria-live="polite"` for the AI Savings Tool and Contact Form submission confirmations, ensuring screen readers announce these critical updates.
-   **Semantic Markup:** Updated the Hero section with `aria-labelledby` for better section identification by assistive technologies.
-   **Focus Styling for Buttons:** Applied `focus-visible` styling to the "Send another request" button in the Contact Form for consistent focus indication.
-   **Decorative Image Alt Text:** Removed unnecessary alt text from the Hero section's background image, setting it to `alt=""` and `role="presentation"` as it's purely decorative.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
       .delay-300 { animation-delay: 300ms; }
       .delay-400 { animation-delay: 400ms; }
       .delay-500 { animation-delay: 500ms; }
+
+      /* Accessibility: Visible Focus Rings */
+      :focus-visible {
+        outline: 2px solid #FF851B;
+        outline-offset: 4px;
+        border-radius: 4px;
+      }
+
+      /* Tailwind focus styles sometimes need overrides for specific components */
+      .focus-ring:focus-visible {
+        box-shadow: 0 0 0 2px white, 0 0 0 4px #FF851B;
+        outline: none;
+      }
     </style>
   <script type="importmap">
 {
