--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>York Eco Home Services Inc. | Toronto's Trusted HVAC Experts</title>
+    <title>York Eco-Home Services Inc. | Toronto's Trusted HVAC Experts</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Inter', sans-serif;
         scroll-behavior: smooth;
+        overflow-x: hidden;
       }
       .bg-navy { background-color: #0A192F; }
       .text-navy { color: #0A192F; }
@@ -78,5 +79,7 @@
 </head>
   <body>
     <div id="root"></div>
+    <!-- Entry point script required for the build process and application mounting -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
